New Major version (#634)
* Drop deprecated methods

* Drop newly deprecated methods

* Make Options hidden

* Bump Java to 17

* Upgrade deps

* Hide Options

* Automated inspections

* Migrate to modern Java